k3d/01_nginx_ingress/kubernetes/01_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: podinfo
spec:
  selector:
    matchLabels:
      app: podinfo
  template:
    metadata:
      labels:
        app: podinfo
    spec:
      containers:
      - name: podinfo
        image: stefanprodan/podinfo
        resources:
          limits:
            memory: "64Mi"
            cpu: "256m"
        ports:
        - containerPort: 9898
